--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="mat-elevation-z6" color="primary">
-    <a mat-button [href]="homeUrl">
-      <img [src]="watbottPath" class="icon-logo"> WatBott
-    </a>
-    <button mat-button>About</button>
-    <span class="flex-spacer"></span>
-    <a mat-button [href]="twitterUrl">
-      <mat-icon svgIcon="twitter-logo" class="icon-logo"></mat-icon> Twitter
-    </a>
-    <a mat-button [href]="githubUrl">
-      <img [src]="githubPath"> GitHub
-    </a>
+  <a routerLink="/" routerLinkActive="active" mat-button>
+    <img [src]="watbottPath" class="icon-logo"> WatBott
+  </a>
+  <a routerLink="/about" routerLinkActive="active" mat-button>About</a>
+  <span class="flex-spacer"></span>
+  <a mat-button [href]="twitterUrl">
+    <mat-icon svgIcon="twitter-logo" class="icon-logo"></mat-icon> Twitter
+  </a>
+  <a mat-button [href]="githubUrl">
+    <img [src]="githubPath"> GitHub
+  </a>
 </mat-toolbar>
