corrected login icon color

--- a/src/app/components/home/home-header/home-header.component.html
+++ b/src/app/components/home/home-header/home-header.component.html
@@ -5,7 +5,7 @@
       <h2>Virtual assistant for Twitch chat</h2>
     </div>
     <div class="header-login">
-      <app-login-twitch icon="twitch-logo-white" color="secondary"></app-login-twitch>
+      <app-login-twitch icon="twitch-logo-purple" color="secondary"></app-login-twitch>
     </div>
   </div>
 </header>
