added about page content

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,36 +1,46 @@
 <app-page-header title="About"></app-page-header>
 <div class="promo">
-  <div class="promo-row">
-    <div class="promo-icon">
-      <mat-icon>chevron_left</mat-icon>
-      <mat-icon>mood</mat-icon>
-      <mat-icon>mood</mat-icon>
-      <mat-icon>mood</mat-icon>
-      <mat-icon>chevron_right</mat-icon>
-    </div>
-    <div class="promo-desc">
-      <h2>
-        Aliqua minim fugiat exercitation cupidatat sit eu.
-      </h2>
-      <p>
-        Velit aute occaecat non incididunt dolore est esse veniam fugiat laboris qui ullamco irure. Officia ipsum ex exercitation sit consequat sunt. Culpa laborum in voluptate aliqua do laborum minim adipisicing esse est. Officia nisi incididunt ipsum ad consequat.
-      </p>
-    </div>
-  </div>
+    <div class="promo-row">
+        <div class="promo-icon">
+          <mat-icon>chevron_left</mat-icon>
+          <mat-icon>live_help</mat-icon>
+          <mat-icon>forward</mat-icon>
+          <mat-icon>chat</mat-icon>
+          <mat-icon>chevron_right</mat-icon>
+        </div>
+        <div class="promo-desc">
+          <h2>
+            The difference
+          </h2>
+          <p>
+            WatBott is powered by Watson Assistant, which allows the bot to
+            understand a user's intent and respond with a dialogue. This
+            eliminates the need for a user to know any specific commands
+            before interacting with WatBott. That being said, custom
+            commands are often desired for streamers, which is a
+            functionality that is included with WatBott.
+          </p>
+        </div>
+      </div>
   <div class="promo-row reverse">
     <div class="promo-icon">
       <mat-icon>chevron_left</mat-icon>
-      <mat-icon>mood</mat-icon>
-      <mat-icon>mood</mat-icon>
-      <mat-icon>mood</mat-icon>
+      <mat-icon>group</mat-icon>
+      <mat-icon>code</mat-icon>
+      <mat-icon>share</mat-icon>
       <mat-icon>chevron_right</mat-icon>
     </div>
     <div class="promo-desc">
       <h2>
-        Eu exercitation voluptate adipisicing commodo sit aliqua nisi aliquip et.
+        Open Source
       </h2>
       <p>
-        Occaecat nisi in adipisicing commodo deserunt sit. Tempor aute exercitation irure deserunt sint dolore in qui quis. Laborum aliquip nostrud magna labore ea. Reprehenderit esse velit aute quis pariatur sunt. Lorem nisi non anim quis aute officia minim commodo ad laborum aliqua. Sit sunt irure mollit in Lorem laborum deserunt cillum laborum dolor ipsum duis.
+        WatBott is an open source project hosted on <a [href]=githubUrl>GitHub</a>.
+        This project was created with the idea of "This is how chatbots
+        <i>should</i> be." With that vision in mind, an open sourceproject is
+        vital to allow others to help improve WatBott, or inspire other chatbot
+        creators to create something even better; either way, it's a win-win
+        scenario.
       </p>
     </div>
   </div>
