--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="promo-desc">
           <h2>
-            The difference
+            The Difference
           </h2>
           <p>
             WatBott is powered by Watson Assistant, which allows the bot to
