--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <a mat-button routerLink="/" routerLinkActive="active">
     <img class="icon-logo" [src]="watbottPath"> WatBott
   </a>
+  <a *ngIf="isAuth" mat-button routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
   <a mat-button routerLink="/about" routerLinkActive="active">About</a>
   <span class="flex-spacer"></span>
   <a mat-button class="desktop-only" [href]="twitterUrl">
