--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -13,9 +13,11 @@ footer {
   display: flex;
   flex-flow: row wrap;
   padding: 8px;
+  flex-direction: column;
 }
 
 .footer-copyright {
   flex: 1;
   text-align: center;
+  margin-bottom: 15px;
 }
