--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer>
   <div class="footer-list">
     <span class="footer-copyright">Licensed under MIT License.</span>
+    <app-socials [showText]="false"></app-socials>
   </div>
 </footer>
