--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <a mat-button routerLink="/" routerLinkActive="active">
     <img class="icon-image" [src]="watbottImage"> WatBott
   </a>
-  <a mat-button class="desktop-only" routerLink="/about" routerLinkActive="active">
+  <a mat-button routerLink="/about" routerLinkActive="active">
     About
   </a>
   <span class="flex-spacer"></span>
@@ -10,23 +10,7 @@
     <img class="icon-image" [src]="userImage">
     <span class="desktop-only"> {{ username }}</span>
   </button>
-  <a mat-button class="desktop-only" [href]="twitterUrl" target="_blank">
-    <mat-icon class="icon-image" svgIcon="twitter-logo"></mat-icon> Twitter
-  </a>
-  <a mat-button class="desktop-only" [href]="githubUrl" target="_blank">
-    <img [src]="githubImage"> GitHub
-  </a>
-  <button mat-button class="mobile-only" [matMenuTriggerFor]="mobileMenu">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <mat-menu #mobileMenu="matMenu">
-    <a mat-menu-item routerLink="/about" routerLinkActive="active">
-      About
-    </a>
-    <button mat-menu-item class="mobile-only" [matMenuTriggerFor]="socialMenu">
-      Socials
-    </button>
-  </mat-menu>
+  <app-socials class="desktop-only" showText="true" *ngIf="!isAuthenticated"></app-socials>
   <mat-menu #socialMenu="matMenu">
     <a mat-menu-item [href]="twitterUrl">
       Twitter
