--- a/src/app/components/login-twitch/login-twitch.component.html
+++ b/src/app/components/login-twitch/login-twitch.component.html
@@ -1,4 +1,4 @@
 <a mat-raised-button [href]="loginUrl" color="{{color}}" *ngIf="!isAuthenticated">
   <mat-icon svgIcon={{icon}}></mat-icon>
-  Connect with Twitch
+  {{ text }}
 </a>
