cleaned up constructor format

--- a/src/app/components/home/home-promo/home-promo.component.html
+++ b/src/app/components/home/home-promo/home-promo.component.html
@@ -51,6 +51,6 @@
     </div>
   </div>
   <div class="bottom-twitch-login">
-    <app-login-twitch text="Login with Twitch" icon="twitch-logo-white" color="primary"></app-login-twitch>
+    <app-login-twitch text="Login with Twitch" icon="white-logo" color="primary"></app-login-twitch>
   </div>
 </div>
