updating watbott description

--- a/src/app/components/home/home-header/home-header.component.html
+++ b/src/app/components/home/home-header/home-header.component.html
@@ -2,7 +2,7 @@
   <div class="header-section">
     <div class="header-headline">
       <h1>WatBott</h1>
-      <h2>Virtual assistant for Twitch chat</h2>
+      <h2>AI Assistant for Twitch chat</h2>
     </div>
     <div class="header-login">
       <app-login-twitch text="Login with Twitch" icon="purple-logo" color="secondary"></app-login-twitch>
