--- a/src/app/components/home/home-promo/home-promo.component.html
+++ b/src/app/components/home/home-promo/home-promo.component.html
@@ -19,7 +19,7 @@
         More than a chatbot
       </h2>
       <p>
-        WatBott is a virtual assistant, powered by Watson Assistant,
+        WatBott is an AI Assistant, powered by Watson Assistant,
         that understands your questions in the numerous ways they are asked.
       </p>
     </div>
