--- a/src/app/components/home/home-header/home-header.component.html
+++ b/src/app/components/home/home-header/home-header.component.html
@@ -5,7 +5,7 @@
       <h2>AI Assistant for Twitch chat</h2>
     </div>
     <div class="header-login">
-      <app-login-twitch text="Login with Twitch" icon="purple-logo" color="secondary"></app-login-twitch>
+      <app-login-twitch text="Login with Twitch" icon="twitch-purple" color="secondary"></app-login-twitch>
     </div>
   </div>
 </header>
