added isconnected endpoint- started connect/disconnect front end

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,13 +3,11 @@
 <mat-tab-group>
   <mat-tab label="General">
     <mat-card>
-      <mat-card-title>Title</mat-card-title>
       <mat-card-content>
-        <p>Dolore reprehenderit nisi velit qui veniam laboris in veniam laboris dolor consectetur aliqua quis. Ipsum
-          laborum dolor magna exercitation excepteur. Qui in aliquip Lorem consequat ea magna fugiat mollit labore
-          pariatur dolore. Deserunt commodo ex labore minim irure tempor incididunt in. Cillum non pariatur qui
-          consequat velit.
-        </p>
+        <mat-chip-list>
+          <mat-chip>Connect</mat-chip>
+          <mat-chip color="warn">Disconnect</mat-chip>
+        </mat-chip-list>
       </mat-card-content>
     </mat-card>
   </mat-tab>
