--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,26 +1,12 @@
 <app-page-header title="Dashboard"></app-page-header>
-
-<mat-tab-group>
-  <mat-tab label="General">
-    <mat-card>
-      <mat-card-content>
-        <mat-chip-list>
-          <mat-chip>Connect</mat-chip>
-          <mat-chip color="warn">Disconnect</mat-chip>
-        </mat-chip-list>
-      </mat-card-content>
-    </mat-card>
-  </mat-tab>
-  <mat-tab label="Commands">
-    <mat-card>
-      <mat-card-title>Title</mat-card-title>
-      <mat-card-content>
-        <p>Dolore reprehenderit nisi velit qui veniam laboris in veniam laboris dolor consectetur aliqua quis. Ipsum
-          laborum dolor magna exercitation excepteur. Qui in aliquip Lorem consequat ea magna fugiat mollit labore
-          pariatur dolore. Deserunt commodo ex labore minim irure tempor incididunt in. Cillum non pariatur qui
-          consequat velit.
-        </p>
-      </mat-card-content>
-    </mat-card>
-  </mat-tab>
-</mat-tab-group>
+<div class="card-wrapper">
+  <mat-card>
+    <mat-card-content>
+      <mat-chip-list>
+        <mat-chip class="connect">Connect to chat</mat-chip>
+        <mat-chip class="disconnect">Disconnect from chat</mat-chip>
+      </mat-chip-list>
+      <mat-divider></mat-divider>
+    </mat-card-content>
+  </mat-card>
+</div>
