updated view & endpoint for if bot is connected

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
   <mat-card>
     <mat-card-content>
       <mat-chip-list>
-        <mat-chip class="connect">Connect to chat</mat-chip>
-        <mat-chip class="disconnect">Disconnect from chat</mat-chip>
+        <mat-chip class="connect" *ngIf="!isConnected">Connect to chat</mat-chip>
+        <mat-chip class="disconnect" *ngIf="isConnected">Disconnect from chat</mat-chip>
       </mat-chip-list>
       <mat-divider></mat-divider>
     </mat-card-content>
