--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,8 +3,16 @@
   <mat-card>
     <mat-card-content>
       <mat-chip-list>
-        <mat-chip class="connect" *ngIf="!isConnected">Connect to chat</mat-chip>
-        <mat-chip class="disconnect" *ngIf="isConnected">Disconnect from chat</mat-chip>
+        <a [href]="connectUrl">
+          <mat-chip class="connect" *ngIf="!isConnected">
+            Connect to chat
+          </mat-chip>
+        </a>
+        <a [href]="disconnectUrl">
+          <mat-chip class="disconnect" *ngIf="isConnected">
+            Disconnect from chat
+          </mat-chip>
+        </a>
       </mat-chip-list>
       <mat-divider></mat-divider>
     </mat-card-content>
