removed icons and updated description

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,11 +2,9 @@
 <div class="promo">
     <div class="promo-row">
         <div class="promo-icon">
-          <mat-icon>chevron_left</mat-icon>
           <mat-icon>live_help</mat-icon>
           <mat-icon>forward</mat-icon>
           <mat-icon>chat</mat-icon>
-          <mat-icon>chevron_right</mat-icon>
         </div>
         <div class="promo-desc">
           <h2>
@@ -17,18 +15,16 @@
             understand a user's intent and respond with a dialogue. This
             eliminates the need for a user to know any specific commands
             before interacting with WatBott. That being said, custom
-            commands are often desired for streamers, which is a
-            functionality that is included with WatBott.
+            commands are useful for streamers to have and WatBott comes with
+            this feature.
           </p>
         </div>
       </div>
   <div class="promo-row reverse">
     <div class="promo-icon">
-      <mat-icon>chevron_left</mat-icon>
       <mat-icon>group</mat-icon>
       <mat-icon>code</mat-icon>
       <mat-icon>share</mat-icon>
-      <mat-icon>chevron_right</mat-icon>
     </div>
     <div class="promo-desc">
       <h2>
