--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,10 +3,10 @@
   <mat-card>
     <mat-card-content>
       <mat-chip-list>
-        <mat-chip class="connect" *ngIf="!isConnected">
+        <mat-chip class="connect" (click)="joinChannel()" *ngIf="!isConnected">
           Connect to chat
         </mat-chip>
-        <mat-chip class="disconnect" *ngIf="isConnected">
+        <mat-chip class="disconnect" (click)="partChannel()" *ngIf="isConnected">
           Disconnect from chat
         </mat-chip>
       </mat-chip-list>
