connect button colors

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -18,11 +18,11 @@ mat-divider {
 }
 
 .connect {
-  background: green;
+  background: #00e500;
 }
 
 .disconnect {
-  background: red;
+  background: #ff0000;
 }
 
 @media (max-width: 720px) {
