separated card out of dashboard-content

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,8 @@
 <app-page-header title="Dashboard"></app-page-header>
-<app-dashboard-content></app-dashboard-content>
+<div class="card-wrapper">
+  <mat-card>
+    <mat-card-content>
+      <app-dashboard-content></app-dashboard-content>
+    </mat-card-content>
+  </mat-card>
+</div>
