--- a/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
@@ -1,9 +1,41 @@
-<mat-chip-list>
-  <mat-chip class="connect" (click)="joinChannel()" *ngIf="!isConnected">
-    Connect to chat
-  </mat-chip>
-  <mat-chip class="disconnect" (click)="partChannel()" *ngIf="isConnected">
-    Disconnect from chat
-  </mat-chip>
-</mat-chip-list>
-<mat-divider></mat-divider>
+<mat-tab-group>
+  <mat-tab label="General">
+    <mat-chip-list>
+      <mat-chip class="connect" (click)="joinChannel()" *ngIf="!isConnected">
+        Connect to chat
+      </mat-chip>
+      <mat-chip class="disconnect" (click)="partChannel()" *ngIf="isConnected">
+        Disconnect from chat
+      </mat-chip>
+    </mat-chip-list>
+    <mat-divider></mat-divider>
+  </mat-tab>
+  <mat-tab label="Commands">
+    <table mat-table [dataSource]="dataSource">
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="message">
+        <th mat-header-cell *matHeaderCellDef>Message</th>
+        <td mat-cell *matCellDef="let element">{{ element.message }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="level">
+        <th mat-header-cell *matHeaderCellDef>Level</th>
+        <td mat-cell *matCellDef="let element">{{ element.level }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="enabled">
+        <th mat-header-cell *matHeaderCellDef>Enabled</th>
+        <td mat-cell *matCellDef="let element">{{ element.enabled }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef=" let row; columns: displayedColumns;"></tr>
+    </table>
+
+  </mat-tab>
+</mat-tab-group>
