--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,9 +14,7 @@
             WatBott is powered by Watson Assistant, which allows the bot to
             understand a user's intent and respond with a dialogue. This
             eliminates the need for a user to know any specific commands
-            before interacting with WatBott. That being said, custom
-            commands are useful for streamers to have and WatBott comes with
-            this feature.
+            before interacting with WatBott.
           </p>
         </div>
       </div>
