--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,23 +1,23 @@
 <app-page-header title="About"></app-page-header>
 <div class="promo">
-    <div class="promo-row">
-        <div class="promo-icon">
-          <mat-icon>live_help</mat-icon>
-          <mat-icon>forward</mat-icon>
-          <mat-icon>chat</mat-icon>
-        </div>
-        <div class="promo-desc">
-          <h2>
-            The Difference
-          </h2>
-          <p>
-            WatBott is powered by Watson Assistant, which allows the bot to
-            understand a user's intent and respond with a dialogue. This
-            eliminates the need for a user to know any specific commands
-            before interacting with WatBott.
-          </p>
-        </div>
-      </div>
+  <div class="promo-row">
+    <div class="promo-icon">
+      <mat-icon>live_help</mat-icon>
+      <mat-icon>forward</mat-icon>
+      <mat-icon>chat</mat-icon>
+    </div>
+    <div class="promo-desc">
+      <h2>
+        The Difference
+      </h2>
+      <p>
+        WatBott is powered by Watson Assistant, which allows the bot to
+        understand a user's intent and respond with a dialogue. This
+        eliminates the need for a user to know any specific commands
+        before interacting with WatBott.
+      </p>
+    </div>
+  </div>
   <div class="promo-row reverse">
     <div class="promo-icon">
       <mat-icon>group</mat-icon>
@@ -35,6 +35,21 @@
         vital to allow others to help improve WatBott, or inspire other chatbot
         creators to create something even better; either way, it's a win-win
         scenario.
+      </p>
+    </div>
+  </div>
+  <div class="promo-row">
+    <div class="promo-icon">
+      <mat-icon>palette</mat-icon>
+      <mat-icon>favorite</mat-icon>
+      <mat-icon>image_search</mat-icon>
+    </div>
+    <div class="promo-desc">
+      <h2>Thank you</h2>
+      <p>
+        A special thank you to Erik for allowing WatBott to use his artwork to
+        be the face of this project. If you'd like to see or purchase some of
+        his work, you can check it out <a [href]=artistUrl>here</a>.
       </p>
     </div>
   </div>
