--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,14 +1,13 @@
 mat-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 12px;
+  min-height: 700px;
+  max-width: 720px;
+  flex-grow: 1;
 }
 
 .card-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 720px) {
