--- a/src/app/components/home/home-header/home-header.component.css
+++ b/src/app/components/home/home-header/home-header.component.css
@@ -35,8 +35,7 @@ h2 {
   margin: 60px 0;
 }
 
-@media (max-width: 720px)
-{
+@media (max-width: 720px) {
   .header-section {
     padding-top: 15px;
   }
