added beta description & other minor fixes

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,9 +7,7 @@
       <mat-icon>chat</mat-icon>
     </div>
     <div class="promo-desc">
-      <h2>
-        The Difference
-      </h2>
+      <h2>AI Assistant</h2>
       <p>
         WatBott is powered by Watson Assistant, which allows the bot to
         understand a user's intent and respond with a dialogue. This
@@ -20,14 +18,30 @@
   </div>
   <div class="promo-row reverse">
     <div class="promo-icon">
+      <mat-icon>people</mat-icon>
+      <mat-icon>compare_arrows</mat-icon>
+      <mat-icon>lock</mat-icon>
+    </div>
+    <div class="promo-desc">
+      <h2>Private Beta</h2>
+      <p>
+        Currently WatBott is in a "private beta" phase with no certainty of a
+        transition into a public phase. WatBott is currently under the lite
+        (free) plan for Watson Assistant, which means there is a limit on how
+        many messages can be sent per month. Funding and demand are the two
+        unknown factors which will determine if WatBott can become more
+        publicly available.
+      </p>
+    </div>
+  </div>
+  <div class="promo-row">
+    <div class="promo-icon">
       <mat-icon>group</mat-icon>
       <mat-icon>code</mat-icon>
       <mat-icon>share</mat-icon>
     </div>
     <div class="promo-desc">
-      <h2>
-        Open Source
-      </h2>
+      <h2>Open Source</h2>
       <p>
         WatBott is an open source project hosted on <a [href]=githubUrl>GitHub</a>.
         This project was created with the idea of "This is how chatbots
@@ -38,11 +52,11 @@
       </p>
     </div>
   </div>
-  <div class="promo-row">
+  <div class="promo-row reverse">
     <div class="promo-icon">
-      <mat-icon>palette</mat-icon>
-      <mat-icon>favorite</mat-icon>
       <mat-icon>image_search</mat-icon>
+      <mat-icon>favorite</mat-icon>
+      <mat-icon>palette</mat-icon>
     </div>
     <div class="promo-desc">
       <h2>Thank you</h2>
