updated chat examples

--- a/src/app/components/home/home-promo/home-promo.component.html
+++ b/src/app/components/home/home-promo/home-promo.component.html
@@ -6,7 +6,7 @@
         <span class="username bot">WatBott</span>: Streamer has been live for 1 hour and 18 minutes.
       </p>
       <p>
-        <span class="username viewer-two">Viewer</span>: !uptime<br>
+        <span class="username viewer-two">Viewer</span>: !uptime @watbott<br>
         <span class="username bot">WatBott</span>: Streamer has been live for 1 hour and 18 minutes.
       </p>
       <p>
@@ -27,16 +27,16 @@
   <div class="promo-row reverse">
     <div class="promo-chat">
       <p>
-        <span class="username viewer-one">Viewer</span>: WatBott tell me a joke.<br>
+        <span class="username viewer-one">Viewer</span>: watbott tell me a joke.<br>
         <span class="username bot">WatBott</span>: Ever tried to eat a clock? It's time-consuming.
       </p>
       <p>
-        <span class="username viewer-two">Viewer</span>: 8-ball will I ever ask the right questions? @WatBott<br>
+        <span class="username viewer-two">Viewer</span>: 8-ball will I ever ask the right questions? @watbott<br>
         <span class="username bot">WatBott</span>: Ask again later.
       </p>
       <p>
-        <span class="username viewer-three">Viewer</span>: @Watbott I love you.<br>
-        <span class="username bot">WatBott</span>: Thank you.
+        <span class="username viewer-three">Viewer</span>: @WatBott I love you.<br>
+        <span class="username bot">WatBott</span>: Okay!
       </p>
     </div>
     <div class="promo-desc">
