Added mat-icons to chat examples

--- a/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
@@ -27,8 +27,17 @@
     </small>
   </p>
   <mat-list class="chat">
-    <mat-list-item>"How long has this streamer been live?"</mat-list-item>
-    <mat-list-item>"Magic 8ball is pizza my one true love?"</mat-list-item>
-    <mat-list-item>"Tell me a joke."</mat-list-item>
+    <mat-list-item>
+      <mat-icon>arrow_right_alt</mat-icon>
+      "How long has this streamer been live?"
+    </mat-list-item>
+    <mat-list-item>
+      <mat-icon>arrow_right_alt</mat-icon>
+      "Magic 8ball is pizza my one true love?"
+    </mat-list-item>
+    <mat-list-item>
+      <mat-icon>arrow_right_alt</mat-icon>
+      "Tell me a joke."
+    </mat-list-item>
   </mat-list>
 </div>
