--- a/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
+++ b/src/app/components/dashboard/dashboard-content/dashboard-content.component.html
@@ -18,15 +18,16 @@
 </div>
 <mat-divider></mat-divider>
 <div class="chat-wrapper">
-  <h3 mat-subheader>
-    Chat examples:
-  </h3>
-  <p class="chat-subheader">
+  <div class="chat-header">
+    <h3 mat-subheader>
+      Chat examples:
+    </h3>
+    <span class="flex-spacer"></span>
     <small>
-      (Don't forget to tag or mention WatBott in your message)
+      (Don't forget to tag or mention "WatBott" in your message)
     </small>
-  </p>
-  <mat-list class="chat">
+  </div>
+  <mat-list class="chat-content">
     <mat-list-item>
       <mat-icon>arrow_right_alt</mat-icon>
       "How long has this streamer been live?"
