--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     About
   </a>
   <span class="flex-spacer"></span>
-  <app-login-twitch text="Login" icon="twitch-purple" color="secondary"></app-login-twitch>
+  <app-login-twitch text="Login" icon="twitch-purple" color="secondary" *ngIf="!isAuthenticated"></app-login-twitch>
   <app-socials class="desktop-only" showText="true" *ngIf="!isAuthenticated"></app-socials>
   <button mat-button [matMenuTriggerFor]="userMenu" *ngIf="isAuthenticated">
     <mat-icon *ngIf="!profileImage">person</mat-icon>
