--- a/src/client/components/dashboard/dashboard-dialog/dashboard-dialog.component.html
+++ b/src/client/components/dashboard/dashboard-dialog/dashboard-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Sorry!</h1>
 <mat-dialog-content>
-  <p>Currently WatBott only provides access to authorized users.</p>
+  <p>Currently, WatBott only provides access to authorized users.</p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Okay</button>
